# apps/api/src/work-report/work-report.module.ts
@@ -1,0 +1,6 @@
+import { Module } from '@nestjs/common';
+import { WorkReportController } from './work-report.controller';
+import { WorkReportService } from './work-report.service';
+
+@Module({ controllers: [WorkReportController], providers: [WorkReportService], exports: [WorkReportService] })
+export class WorkReportModule { }
